[package]
name = "Ssl-checker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
native-tls = "0.2.14"
num_cpus = "1.16.0"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["full"] }
x509-parser = "0.17.0"
